# Metra

./: .gitignore  README.md  eval_suite.yaml  main.py  pyproject.toml  requirements.txt
api/: api.py
data/: dataset.json  ejemplo_dataset.json  ethical_dataset.json  factuality_dataset.json  fairness_dataset.json  precision_dataset.json
data/accuracy/: accuracy_test_llama3.json  accuracy_test_mistral.json
data/accuracy_datasets/: accuracy_test_llama3.json  accuracy_test_mistral.json
data/ethic/: ethic_test_llama3.json  ethic_test_mistral.json
data/ethics_datasets/: ethics_test_llama3.json  ethics_test_mistral.json
data/factuality/: factuality_test_llama3.json  factuality_test_mistral.json
data/fairness/: fairness_test_llama3.json
data/fairness_datasets/: fairness_test_mistral.json
data/templates_datasets/: accuracy_dataset.json  ethics_dataset.json  factuality_dataset.json  fairness_dataset.json
evaluator/: main.py  metrics.py  pipeline.py  utils.py
metra_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
notebooks/: accuracy_mistral.ipynb  auto_analysis_llama3.ipynb  auto_analysis_mistral.ipynb  comparacion_modelos.ipynb  ethics_llama3.ipynb  ethics_mistral.ipynb  factuality_llama3.ipynb  factuality_mistral.ipynb  fairness_mistral.ipynb
results/: accuracy_results_llama3.json  accuracy_results_mistral.json  ethics_results_llama3.json  ethics_results_mistral.json  factuality_results_llama3.json  factuality_results_mistral.json  fairness_results_llama3.json  fairness_results_mistral.json
(+9 files in other folders)
